<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#ffffff"
    android:keepScreenOn="true">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/str_puntaje"
        android:id="@+id/text_str_puntaje"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/textSize_barraSup"
        android:textColor="#ff000000"
        android:layout_marginTop="7dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/val_puntaje"
        android:id="@+id/text_val_puntaje"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/text_str_puntaje"
        android:layout_toEndOf="@+id/text_str_puntaje"
        android:textSize="@dimen/textSize_barraSup"
        android:textColor="#ff000000"
        android:layout_marginTop="7dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/str_tiempo"
        android:id="@+id/text_str_tiempo"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/text_val_tiempo"
        android:layout_toStartOf="@+id/text_val_tiempo"
        android:textSize="@dimen/textSize_barraSup"
        android:textColor="#ff000000"
        android:layout_marginTop="7dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/val_tiempo"
        android:id="@+id/text_val_tiempo"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/textSize_barraSup"
        android:textColor="#ff000000"
        android:layout_marginTop="7dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_btn"
        android:layout_marginTop="25dp"
        android:text="@string/str_boton_superior"
        android:id="@+id/btn_superior"
        android:layout_below="@+id/text_str_puntaje"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/text_val_tiempo"
        android:layout_alignEnd="@+id/text_val_tiempo"
        android:textSize="@dimen/textSize_btn"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_btn"
        android:layout_marginBottom="45dp"
        android:text="@string/str_boton_inferior"
        android:id="@+id/btn_inferior"
        android:layout_below="@+id/btn_superior"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/btn_superior"
        android:layout_alignEnd="@+id/btn_superior"
        android:textSize="@dimen/textSize_btn"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/app_name"
        android:id="@+id/text_nombre_app"
        android:textSize="28sp"
        android:textColor="#ff2800a2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_correct"
        android:layout_below="@+id/btn_inferior"
        android:background="@drawable/correct"
        android:onClick="targetCheckR"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/cat"
        android:layout_alignParentRight="true"
        android:clickable="true"/>

    <Button
        android:id="@+id/btn_incorrect"
        android:layout_below="@+id/btn_inferior"
        android:background="@drawable/incorrect"
        android:onClick="targetCheckL"
        android:layout_width="10dp"
        android:layout_height="100dp"
        android:layout_alignRight="@+id/cat"
        android:layout_alignParentLeft="true"
        android:clickable="true" />

    <View
        android:id="@+id/cat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
